# anon-storage-proof

./: .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml
circuits/: Cargo.toml
circuits/src/: axiom_poseidon.rs  hash.rs  main.rs
contracts/: SafeBasicModule.sol  zk_proof.json
contracts/src/: Counter.sol  ISemaphore.sol  SafeBasicModule.sol  SafeHalo2Module.sol  SemaphoreVerifierModule.sol
contracts/test/: SafeHalo2Test.t.sol  SafeTest.t.sol  SemaphoreTest.t.sol
semaphore-proof/: index.ts  package.json
src/: get_proof.rs  main.rs  utils.rs
test/: Counter.t.sol  SafeHalo2Module.t.sol  SafeHalo2Test.t.sol  SafeTest.t.sol  utils.sol
