[package]
name = "private-storage-proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
# halo2-base = { default-features = false, features = [
#     "halo2-pse",
# ], git = "https://github.com/axiom-crypto/halo2-lib.git" }
# axiom-eth = { git = "https://github.com/axiom-crypto/axiom-eth.git", features = [
#     "evm",
#     "halo2-axiom",
#     "providers",
# ] }
# axiom-query = { tag = "v2.0.17", git = "https://github.com/axiom-crypto/axiom-eth.git", default-features = false, features = ["keygen", "halo2-axiom",]  }

axiom-eth = { tag = "v2.0.17", git = "https://github.com/axiom-crypto/axiom-eth.git", default-features = false, features = ["halo2-axiom", "providers", "aggregation"] }
axiom-query = { tag = "v2.0.17", git = "https://github.com/axiom-crypto/axiom-eth.git", default-features = false, features = ["keygen"]  }
axiom-codec = { tag = "v2.0.17", git = "https://github.com/axiom-crypto/axiom-eth.git", default-features = false  }

const-hex = "1.11.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
ethers-core = { version = "=2.0.14", features = ["optimism"] }
ethers-providers = { version = "2.0.14" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
log = "0.4"
env_logger = "0.10"

# helper dep tmp
tokio = { version = "1", features = ["full"] }