[package]
name = "private-storage-proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
# axiom-eth = { git = "https://github.com/axiom-crypto/axiom-eth.git", features = [
#     "evm",
#     "halo2-axiom",
#     "providers",
# ] }
axiom-eth = { path = "./axiom-eth/axiom-eth", features = [
    "evm",
    "halo2-axiom",
    "providers",
] }
const-hex = "1.11.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
ethers-core = { version = "2.0.14", features = ["optimism"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ethers = { version = "2.0.14", features = ["optimism"] }
tokio = { version = "1.38.0", features = ["full"] }
