[package]
name = "anon-storage-proof"
version = "0.1.0"
edition = "2021"
authors = ["teddav <https://github.com/teddav>"]
categories = ["cryptography"]
keywords = ["storage proof", "halo2", "cryptography", "zkp", "zero-knowledge"]

[dependencies]
anyhow = "1.0.81"
# halo2-base = { default-features = false, features = [
#     "halo2-pse",
# ], git = "https://github.com/axiom-crypto/halo2-lib.git" }
axiom-eth = { git = "https://github.com/axiom-crypto/axiom-eth.git", features = [
    "evm",
    "halo2-axiom",
    "providers",
] }
const-hex = "1.11.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
ethers-core = { version = "=2.0.14", features = ["optimism"] }
ethers-providers = { version = "2.0.14" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# helper dep tmp
tokio = { version = "1", features = ["full"] }
