[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0" }
halo2_poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon-gadget" }
pse-poseidon = { git = "https://github.com/axiom-crypto/pse-poseidon" }

# halo2_solidity_verifier = { git = "https://github.com/privacy-scaling-explorations/halo2-solidity-verifier", rev = "f0626be" }

# halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.4.1" }
# serde = { version = "1.0.203", features = ["derive"] }
